# ba.ascija.vaktija

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: main.jsx  styles.css  util.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/Components/: MainContainer.jsx  MainContainer.module.css
src/Components/DateTime/: DateTime.jsx  DateTime.module.css
src/Components/PrayerItem/: PrayerItem.jsx  PrayerItem.module.css
src/Components/PrayerItem/MainPrayerItem/: MainPrayerItem.jsx  MainPrayerItem.module.css
src/Components/PrayerItem/SecondaryPrayerItem/: SecondaryPrayerItem.jsx  SecondaryPrayerItem.module.css
src/Components/SelectLocationModal/: SelectLocationModal.jsx  SelectLocationModal.module.css
src/assets/: countryList.json
