[package]
name = "ba-ascija-vaktija"
version = "1.0.1"
description = "Unofficial port of Vaktija.eu for Linux"
authors = ["AscijA"]
license = "GPL 3.0"
repository = "https://github.com/AscijA/ba.ascija.vaktija"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "system-tray", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.18"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
